--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ejercicio Guiado Positioning</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div class="contentedor">
+	<div class="caja" id="rosa"></div>
+	<div class="caja" id="azul"></div>
+	<div class="caja" id="verde"></div>
+</div>
 
+<script src="js/main.js"></script>
 </body>
 </html>
