--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 <div class="contentedor">
-	<div class="caja" id="rosa"></div>
-	<div class="caja" id="azul"></div>
+	<div class="caja" id="rosa">
+		<div class="caja" id="azul"></div>
+	</div>
 	<div class="caja" id="verde"></div>
 </div>
 
