--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 <div class="contentedor">
-	<div class="caja" id="rosa">
-		<div class="caja" id="azul"></div>
-	</div>
+	<div class="caja" id="rosa"></div>
+	<div class="caja" id="azul"></div>
 	<div class="caja" id="verde"></div>
+	<div class="caja" id="amarillo"></div>
 </div>
 
 <script src="js/main.js"></script>
