--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<div class="contentedor">
+<div class="contenedor">
 	<div class="caja" id="rosa"></div>
 	<div class="caja" id="azul"></div>
 	<div class="caja" id="verde"></div>
